--- a/package.json
+++ b/package.json
@@ -6,10 +6,6 @@
     "@heroicons/react": "^2.2.0",
     "@radix-ui/react-toast": "^1.2.2",
     "@reduxjs/toolkit": "^2.4.0",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
     "@types/node": "^16.18.121",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
@@ -24,6 +20,7 @@
     "react-modal": "^3.16.1",
     "react-redux": "^9.1.2",
     "react-scripts": "5.0.1",
+    "redux-thunk": "^3.1.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss": "^3.4.15",
     "typescript": "^4.9.5",
@@ -54,6 +51,13 @@
     ]
   },
   "devDependencies": {
-    "@types/react-modal": "^3.16.3"
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.0.1",
+    "@testing-library/user-event": "^14.5.2",
+    "@types/jest": "^29.5.14",
+    "@types/react-modal": "^3.16.3",
+    "@types/redux-mock-store": "^1.5.0",
+    "jest": "^27.5.1",
+    "redux-mock-store": "^1.5.5"
   }
 }
